<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory android:title="@string/title_ui_settings">
		<CheckBoxPreference android:title="@string/confirm_exit"
			android:defaultValue="true" android:summary="@string/confirm_exit_desc"
			android:key="cb_exit" />
		<CheckBoxPreference android:title="@string/confirm_delete"
			android:defaultValue="true" android:summary="@string/confirm_delete_desc"
			android:key="cb_delete" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/title_background_sync">
		<CheckBoxPreference android:title="@string/wifi_network"
			android:defaultValue="true" android:summary="@string/wifi_network_desc"
			android:key="cb_wifi_sync" />
		<CheckBoxPreference android:title="@string/mobile_network"
			android:defaultValue="true" android:summary="@string/mobile_network_desc"
			android:key="cb_mobile_sync" />
		
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/title_feedback">
		<Preference android:title="@string/report_bug" android:summary="@string/report_bug_desc"
			android:key="p_report_bug" />
		<Preference android:title="@string/request_feature" android:summary="@string/request_feature_desc"
			android:key="p_request_feature" />
	</PreferenceCategory>
	
	
<!-- 	<PreferenceCategory android:title="Internet Settings"> -->
<!-- 		<ListPreference android:title="Refresh Time" -->
<!-- 			android:summary="Select refresh interval for updating score" -->
<!-- 			android:key="refreshTime" android:defaultValue="20000" -->
<!-- 			android:entries="@array/update_freq" android:entryValues="@array/update_freq_time" /> -->
<!-- 	</PreferenceCategory> -->

<!-- 	<PreferenceCategory android:title="Auto SMS"> -->
<!-- 		<CheckBoxPreference android:title="Enable Auto SMS" -->
<!-- 			android:defaultValue="false" android:summary="Update your friends via SMS" -->
<!-- 			android:key="checkboxSMS" /> -->
<!-- 		<ListPreference android:title="Update when" -->
<!-- 			android:summary="Select when to update your friends" -->
<!-- 			android:key="smsUpdate" android:defaultValue="2" -->
<!-- 			android:entries="@array/sms_update" android:entryValues="@array/sms_update_mode" /> -->
<!-- 	</PreferenceCategory> -->

<!-- 	<PreferenceCategory android:title="SMS and Internet Usage">
		<Preference android:title="SMS sent" android:key="smsSent"
			android:selectable="false" android:summary="0" />
		<Preference android:title="Total SMS sent" android:key="totalSmsSent"
			android:selectable="false" android:summary="0" />
		<Preference android:title="Bandwidth Used" android:key="internetUsage"
			android:selectable="false" />
		<Preference android:title="Total Bandwidth Used"
			android:key="internetUsageTotal" android:selectable="false" />
	</PreferenceCategory>
 -->
<!-- 	<PreferenceCategory android:title="@string/info_about"> -->
<!-- 		<Preference android:title="Version" android:summary="@string/info_version_no" -->
<!-- 			android:key="app_version" android:selectable="false" /> -->
<!-- 		<Preference android:title="Release date" android:summary="@string/info_release_date" -->
<!-- 			android:key="app_date" android:selectable="false" /> -->
<!-- 		<Preference android:title="@string/info_about_twitter" -->
<!-- 			android:summary="@string/info_about_twitter_id" android:key="app_twitter_id"/> -->
<!-- 	</PreferenceCategory> -->

</PreferenceScreen>

